Fix selection overflow not working correctly on Firefox

--- a/Sortify/ClientApp/src/app/components/stepper/steps/selection-step/selection-step.component.sass
+++ b/Sortify/ClientApp/src/app/components/stepper/steps/selection-step/selection-step.component.sass
@@ -59,7 +59,7 @@
 .table-container
   width: 100%
   height: 556px
-  overflow: overlay
+  overflow: auto
 
 .mat-table
   color: $white
